<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CampusMapperGamified</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_building_information">Select a location</string>
    <string name="title_activity_mapping">Mapping</string>
    <string name="title_activity_image_source">Select image source</string>
    <string name="title_activity_transformation">Cropping</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_room_information">Room</string>
    <string name="title_stairs">Stairs/ Elevator</string>
    <string name="stairs">Stairs</string>
    <string name="elevator">Elevator</string>
    <string name="title_auto_mapping">Start automatic mapping?</string>
    <string name="title_cancel_auto_mapping">Cancel automatic mapping?</string>
    <string name="message_leave_mapping">All data will be lost!</string>
    <string name="title_leave_mapping">Leave mapping?</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="button_new_project">New Project</string>
    <string name="button_local_project">last modified</string>
    <string name="text_inroduction">Here you can help to refine the WWU campus map. How this works? First you take a picture of the floorplan. Then you draw along the hallways, rooms or doors to create a digital map of it. Later this maps can be used for accurate navigation space - so that your classmates can find themselves the most hidden seminar room easily.</string>
    <string name="title_entrace">Entrance/ Exit</string>
    <string name="entrance_indoors">to another floorplan</string>
    <string name="entrance_outdoors">to the outside</string>
    <string name="destination_floor_up">Destination floor (top)</string>
    <string name="destination_floor_down">Destination floor (below)</string>
    <string name="title_activity_stairs_location">Choose destination</string>
    <string name="title_choose_plan">Choose plan</string>
    <string name="title_choose_stairs_location">Select / create target stairs</string>
    <string name="title_choose_elevator_location">Select / Create Target Elevator</string>
    <string name="title_choose_entrance_indoor_location">Select / create target entrance</string>
    <string name="title_activity_entrance_location">Select entrance position</string>
    <string name="title_submit">Send data to the server?</string>
    <string name="description_submit">All collected data (including picture) will be uploaded.</string>
    <string name="title_progress_submit_image1">Submitting picture 1</string>
    <string name="title_progress_submit_image2">Submitting picture 2</string>
    <string name="title_progress_submit_indoor_data">Submitting data</string>
    <string name="submit_success">Thank you for participating!</string>
    <string name="submit_failure">Error uploading!</string>
    <string name="text_building_name">Building</string>
    <string name="text_floor">Floor number</string>
    <string name="text_button_camera">Camera</string>
    <string name="text_button_gallery">Gallery</string>
    <string name="text_entrance_type">Type</string>
    <string name="text_room_name">Name</string>
    <string name="text_checkbox_create_door">Connect with door</string>
    <string name="text_button_add_person">Add person</string>
    <string name="message_no_internet">Please make sure that there is an Internet connection.</string>
    <string name="message_chose_building_and_floor">Please select a building and floor.</string>
    <string name="message_building_not_in_database">The selected buildings could not be found in the database.</string>
    <string name="message_no_server_response">Server not responding. Please try again later.</string>
    <string name="text_existing_plan">Create new or edit existing floorplan.</string>
    <string name="title_existing_plan">Existing floorplan</string>
    <string name="title_button_start">Start</string>
    <string name="title_mapping_corridor">Draw corridors</string>
    <string name="title_mapping_room">Tap room</string>
    <string name="title_mapping_door">Add doors</string>
    <string name="title_mapping_entrance">Select entrance</string>
    <string name="title_mapping_stairs">Select stairs</string>
    <string name="title_mapping_submit">Send it to the server</string>
    <string name="title_submit_succes">Data successfully uploaded</string>
    <string name="destination_floor">Destination floors</string>
    <string name="label_type">Type</string>
    <string name="label_persons">Persons</string>
    <string name="label_destination">Destination</string>
    <string name="title_settings">Settings</string>
    <string name="label_settings_scale_factor_image">Floorplan image size settings</string>
    <string name="description_settings_scale_factor_image">If problems occur when loading images on, this value should be increased to 2 or 3.</string>
	<!-- (04-11-2013): gamification elements -->
	<string name="title_activity_ownership">Building Owners</string>	
	<string name="score">0000</string>
	<string name="leaderboard">List of Players</string>
	<string name="text_welcome">Welcome to the Campus Mapper Game, please choose a username, this is only one time registration process.</string>
	<string name="title_button_go">GO</string>
	<string name="text_username">Username:</string>
</resources>
