<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageSourceActivity" >

    <LinearLayout
        android:id="@+id/selectSourceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/editText_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_inroduction" />

        <Button
            android:id="@+id/button_new_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="newProject"
            android:text="@string/title_button_start" />


		<Button
            android:id="@+id/button_local_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:onClick="localProject"
            android:text="@string/button_local_project" />
    </LinearLayout>

</RelativeLayout>