<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="6dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        
                    <TextView
                android:id="@+id/textView_entrance_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_entrance_type" />
        
        <RadioGroup
            android:id="@+id/radiogroup_indoor_outdoor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_outdoors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/entrance_outdoors" />

            <RadioButton
                android:id="@+id/radio_indoors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrance_indoors" />
        </RadioGroup>
        
                <TextView
            android:id="@+id/textView_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_destination" />
        
                    <Button
                        android:id="@+id/button_choose_destination_entrance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:drawableLeft="@drawable/ic_location" />

    </LinearLayout>

</ScrollView>