<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="6dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_stairs_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_type" />

        <RadioGroup
            android:id="@+id/radiogroup_stairs_elevator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_stairs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/stairs" />

            <RadioButton
                android:id="@+id/radio_elevator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elevator" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/destination_floor" />

        <LinearLayout
            android:id="@+id/linearLayout_stairs_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/textView_destination_floor_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned"
                    android:text="" >
                </EditText>

                <Button
                    android:id="@+id/button_choose_destination_floor_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location" />
            </LinearLayout>


        </LinearLayout>

                    <Button
                        android:id="@+id/button_add_destination_floor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:drawableLeft="@drawable/ic_add_destination_floor" />

        <!-- <TextView -->
        <!-- android:id="@+id/textView_label" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginBottom="4dp" -->
        <!-- android:layout_marginLeft="4dp" -->
        <!-- android:layout_marginRight="4dp" -->
        <!-- android:layout_marginTop="16dp" -->
        <!-- android:text="@string/destination_floor_down" /> -->


        <!-- <LinearLayout -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:orientation="horizontal" > -->


        <!-- <EditText -->
        <!-- android:id="@+id/textView_destination_floor_down" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:ems="10" -->
        <!-- android:inputType="numberSigned" -->
        <!-- android:text="" > -->
        <!-- </EditText> -->


        <!-- <Button -->
        <!-- android:id="@+id/button_choose_destination_floor_down" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:drawableLeft="@drawable/ic_location" /> -->
        <!-- </LinearLayout> -->
    </LinearLayout>

</ScrollView>